--- a/src/fko/chessly/ui/JavaFX_GUI/AboutDialog.fxml
+++ b/src/fko/chessly/ui/JavaFX_GUI/AboutDialog.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fko.chessly.ui.JavaFX_GUI.AboutDialog_Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fko.chessly.ui.JavaFX_GUI.AboutDialog_Controller">
    <children>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -20,7 +20,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="aboutDialog_OK_button" cancelButton="true" defaultButton="true" mnemonicParsing="false" onAction="#aboutDialog_closeAction" text="OK" GridPane.columnIndex="1" />
+                  <Button fx:id="aboutDialog_OK_button" cancelButton="true" defaultButton="true" minWidth="-Infinity" mnemonicParsing="false" onAction="#aboutDialog_closeAction" prefWidth="50.0" text="OK" GridPane.columnIndex="1" />
                </children>
             </GridPane>
          </children>
